MAINT: add rgommers.github.io as base URL.
See https://gohugo.io/hosting-and-deployment/hosting-on-github/#step-by-step-instructions
for details on how to publish to gh-pages

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@
 # For developers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "https://example.org/"  # FIXME
+baseURL = "https://rgommers.github.io/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Ralf Gommers | Reflections"
